# demo/src/main/resources/static/openapi.yaml
@@ -5,7 +5,7 @@ servers:
     url: http://localhost:8080
 info:
   version: "1.0.0"
-  title: swiss-api
+  title: ai-api
 tags:
   - name: User
     description: User
@@ -81,44 +81,6 @@ paths:
           $ref: '#/components/responses/ConflictError'
         '422':
           $ref: '#/components/responses/UnprocessableEntity'
-        '429':
-          $ref: '#/components/responses/TooManyRequests'
-        '500':
-          $ref: '#/components/responses/ServerError'
-
-  /user/favorite/add/{userId}/{flatId}:
-    post:
-      tags:
-        - User
-      operationId: addFavoriteToUser
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int32
-        - name: flatId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int32
-      security:
-        - bearerAuth: [ ]
-      responses:
-        '200':
-          description: Favorite added to user
-          content:
-            application/json:
-              schema:
-                type: string
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '404':
-          $ref: '#/components/responses/NotFound'
         '429':
           $ref: '#/components/responses/TooManyRequests'
         '500':
